--- a/webapp/package.json
+++ b/webapp/package.json
@@ -12,6 +12,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "http-proxy-middleware": "^2.0.6",
+    "js-file-download": "^0.4.12",
     "moment": "^2.29.4",
     "multer": "^1.4.5-lts.1",
     "react": "^18.2.0",
